--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Open+Sans:wght@400;700;800&family=Work+Sans:ital,wght@0,400;0,500;0,800;1,600&display=swap"
+      rel="stylesheet"
+    />
     <title>Flower Shop</title>
   </head>
   <body>
     <!-- Header part start -->
-    <header></header>
+    <header>
+      <section class="banner">
+        <div class="banner-info">
+          <h1 class="banner-text">
+            Let's make <br />
+            beautiful flowers a <br />part of your life.
+          </h1>
+          <p class="banner-description">
+            It is a long established fact that a reader will be distracted by
+            the readable <br />
+            content of a page when looking at its layout. The point of using
+            <br />
+            Lorem Ipsum is that it has a more-or-less normal distribution of
+            letters.
+          </p>
+          <button class="btn-primary">Shop Now</button>
+        </div>
+        <div class="banner-background-image">
+          <img src="assets/images/pngwing 10.png" alt="" class="banner-image" />
+        </div>
+      </section>
+    </header>
     <!-- Main part start -->
     <main></main>
     <!-- Footer part start -->
