--- a/index.html
+++ b/index.html
@@ -37,7 +37,31 @@
       </section>
     </header>
     <!-- Main part start -->
-    <main></main>
+    <main>
+      <!-- Our featured section start  -->
+      <section class="featured">
+        <h1 class="featured-title section-title">Our Featured Flowers</h1>
+        <p class="featured-description section-description">
+          It is a long established fact that a reader will be distracted by the
+          readable <br />
+          content of a page when looking at its layout.
+        </p>
+        <div class="featured-flowers">
+          <div class="flower-1">
+            <img src="assets/images/pngwing 6.png" alt="" class="img-flower1" />
+            <h3 class="f-text">Pink Flower Collection</h3>
+          </div>
+          <div class="flower">
+            <img src="assets/images/pngwing 5.png" alt="" class="img-flower2" />
+            <h3 class="f-text">Red Flower Collection</h3>
+          </div>
+          <div class="flower">
+            <img src="assets/images/pngwing 7.png" alt="" class="img-flower3" />
+            <h3 class="f-text">Yellow Flower Collection</h3>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- Footer part start -->
     <footer></footer>
   </body>
