--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
           <button class="btn-primary">Shop Now</button>
         </div>
         <div class="banner-background-image">
-          <img src="assets/images/pngwing 10.png" alt="" class="banner-image" />
+          <img
+            src="assets/images/pngwing 10.png"
+            alt="flower banner"
+            class="banner-image"
+          />
         </div>
       </section>
     </header>
@@ -48,17 +52,56 @@
         </p>
         <div class="featured-flowers">
           <div class="flower-1">
-            <img src="assets/images/pngwing 6.png" alt="" class="img-flower1" />
+            <img
+              src="assets/images/pngwing 6.png"
+              alt="pink flower"
+              class="img-flower1"
+            />
             <h3 class="f-text">Pink Flower Collection</h3>
           </div>
           <div class="flower">
-            <img src="assets/images/pngwing 5.png" alt="" class="img-flower2" />
+            <img
+              src="assets/images/pngwing 5.png"
+              alt="red flower"
+              class="img-flower2"
+            />
             <h3 class="f-text">Red Flower Collection</h3>
           </div>
           <div class="flower">
-            <img src="assets/images/pngwing 7.png" alt="" class="img-flower3" />
+            <img
+              src="assets/images/pngwing 7.png"
+              alt="yellow flower"
+              class="img-flower3"
+            />
             <h3 class="f-text">Yellow Flower Collection</h3>
           </div>
+        </div>
+      </section>
+      <!-- Benefit section start -->
+      <section class="benefits">
+        <div class="benefit-content">
+          <img
+            src="assets/images/Group 57.png"
+            alt="benefit img"
+            class="benefit-img"
+          />
+          <p class="benefit-text">Same Day Delivery. Click & Collect.</p>
+        </div>
+        <div class="benefit-content">
+          <img
+            src="assets/images/Group 58.png"
+            alt="benefit img"
+            class="benefit-img"
+          />
+          <p class="benefit-text">Fresh Flowers. Local Growers.</p>
+        </div>
+        <div class="benefit-content">
+          <img
+            src="assets/images/Group 59.png"
+            alt="benefit img"
+            class="benefit-img"
+          />
+          <p class="benefit-text">24/7 Free Online Support.</p>
         </div>
       </section>
     </main>
