added deal portion

--- a/index.html
+++ b/index.html
@@ -104,6 +104,31 @@
           <p class="benefit-text">24/7 Free Online Support.</p>
         </div>
       </section>
+      <!-- Deal Section start  -->
+      <section class="deal-background">
+        <div class="deal">
+          <div class="deal-info">
+            <h1 class="section-title">
+              Hot Deal ! Sale Up To 25% <span class="color-crimson">Off</span>
+            </h1>
+            <p class="deal-description">
+              It is a long established fact that a reader will be distracted by
+              <br />
+              the readablecontent of a page when looking at its layout.
+            </p>
+            <div class="singup">
+              <button class="btn-primary text-center">Sign Up</button>
+            </div>
+          </div>
+          <div class="deal-image">
+            <img
+              src="assets/images/pngwing 8.png"
+              alt="Deal Image"
+              class="deal-img"
+            />
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer part start -->
     <footer></footer>
