--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <br />
               the readablecontent of a page when looking at its layout.
             </p>
-            <div class="singup">
+            <div class="sign-up">
               <button class="btn-primary text-center">Sign Up</button>
             </div>
           </div>
@@ -129,6 +129,21 @@
           </div>
         </div>
       </section>
+      <!-- Instagram Section Start  -->
+      <section class="instagram">
+        <h3 class="section-title">Instagram</h3>
+        <p class="section-description">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+        <div class="insta-images">
+          <img src="assets/images/Flower 01.png" alt="" class="insta-image" />
+          <img src="assets/images/Rectangle 4.png" alt="" class="insta-image" />
+          <img src="assets/images/Rectangle 5.png" alt="" class="insta-image" />
+          <img src="assets/images/Rectangle 6.png" alt="" class="insta-image" />
+        </div>
+      </section>
+      <!-- Subscribe section start -->
     </main>
     <!-- Footer part start -->
     <footer></footer>
