added subscription form

--- a/index.html
+++ b/index.html
@@ -144,6 +144,18 @@
         </div>
       </section>
       <!-- Subscribe section start -->
+      <section class="subscribe">
+        <h3 class="section-title">Get The Latest Deals</h3>
+        <p class="section-description">$30 coupon for first shopping</p>
+        <div class="subscribe-email">
+          <input
+            type="email"
+            placeholder="  Enter your email here..."
+            class="email"
+          />
+          <input type="submit" value="Subscribe" class="btn-primary submit" />
+        </div>
+      </section>
     </main>
     <!-- Footer part start -->
     <footer></footer>
