footer section added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Open+Sans:wght@400;700;800&family=Work+Sans:ital,wght@0,400;0,500;0,800;1,600&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/249b13431b.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Flower Shop</title>
   </head>
   <body>
@@ -158,6 +162,30 @@
       </section>
     </main>
     <!-- Footer part start -->
-    <footer></footer>
+    <footer>
+      <h3 class="section-title">
+        <span class="footer-flower">Flower</span
+        ><span class="footer-shop">Shop</span>
+      </h3>
+
+      <p class="section-description footer-description">
+        Live life to the fullest and work hard with Programming Hero.
+      </p>
+      <p class="section-description footer-description">FOLLOW US.</p>
+      <div class="social-icons">
+        <i
+          class="fa-brands fa-square-facebook fa-2x"
+          style="color: #fffafb"
+        ></i>
+        <i class="fa-brands fa-twitter fa-2x" style="color: #ffffff"></i>
+        <i class="fa-brands fa-youtube fa-2x" style="color: #ffffff"></i>
+        <i class="fa-brands fa-instagram fa-2x" style="color: #ffffff"></i>
+        <i class="fa-brands fa-linkedin fa-2x" style="color: #fffefe"></i>
+      </div>
+      <p class="section-description footer-copyright">
+        @2023 FlowerShop | All Rights Reserved | Developed by
+        <span id="dev">Rahmat Ullah (Oniichan).</span>
+      </p>
+    </footer>
   </body>
 </html>
