added top selling categories

--- a/index.html
+++ b/index.html
@@ -46,7 +46,22 @@
     </header>
     <!-- Main part start -->
     <main>
-      <!-- Our featured section start  -->
+      <!-- Featured Categories Start  -->
+      <section class="top-selling-categories">
+        <h1 class="featured-title section-title">Top Selling Categories</h1>
+        <p class="featured-description section-description">
+          Here is our top selling flower categories and you can choose from the
+          collection <br />
+          You'll definitely like them, please visit
+        </p>
+        <div class="categories">
+          <button class="category">Alyssum</button>
+          <button class="category">Caladium</button>
+          <button class="category">Japanese Iris</button>
+          <button class="category">Wisteria</button>
+        </div>
+      </section>
+      <!-- Our featured flower section start  -->
       <section class="featured">
         <h1 class="featured-title section-title">Our Featured Flowers</h1>
         <p class="featured-description section-description">
@@ -182,6 +197,7 @@
         <i class="fa-brands fa-instagram fa-2x" style="color: #ffffff"></i>
         <i class="fa-brands fa-linkedin fa-2x" style="color: #fffefe"></i>
       </div>
+
       <p class="section-description footer-copyright">
         @2023 FlowerShop | All Rights Reserved | Developed by
         <span id="dev">Rahmat Ullah (Oniichan).</span>
