--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
   </head>
   <body>
     <!-- Header part start -->
-    <header>
       <section class="banner">
         <div class="banner-info">
           <h1 class="banner-text">
-            Let's make <br />
+            <span class="span">Let's</span> make <br />
             beautiful flowers a <br />part of your life.
           </h1>
           <p class="banner-description">
@@ -48,10 +47,11 @@
     <main>
       <!-- Featured Categories Start  -->
       <section class="top-selling-categories">
-        <h1 class="featured-title section-title">Top Selling Categories</h1>
+        <h1 class="featured-title section-title">
+          <span class="span">Top Selling</span> Categories
+        </h1>
         <p class="featured-description section-description">
-          Here is our top selling flower categories and you can choose from the
-          collection <br />
+          Here is our top selling flower categories you can choose. <br />
           You'll definitely like them, please visit
         </p>
         <div class="categories">
@@ -63,7 +63,9 @@
       </section>
       <!-- Our featured flower section start  -->
       <section class="featured">
-        <h1 class="featured-title section-title">Our Featured Flowers</h1>
+        <h1 class="featured-title section-title">
+          Our <span class="span">Featured</span> Flowers
+        </h1>
         <p class="featured-description section-description">
           It is a long established fact that a reader will be distracted by the
           readable <br />
@@ -128,7 +130,7 @@
         <div class="deal">
           <div class="deal-info">
             <h1 class="section-title">
-              Hot Deal ! Sale Up To 25% <span class="color-crimson">Off</span>
+              Hot Deal ! Sale Up To 25% <span class="span">Off</span>
             </h1>
             <p class="deal-description">
               It is a long established fact that a reader will be distracted by
@@ -150,7 +152,7 @@
       </section>
       <!-- Instagram Section Start  -->
       <section class="instagram">
-        <h3 class="section-title">Instagram</h3>
+        <h3 class="section-title"><span class="span">Insta</span>gram</h3>
         <p class="section-description">
           It is a long established fact that a reader will be distracted by the
           readable content of a page when looking at its layout.
@@ -164,7 +166,9 @@
       </section>
       <!-- Subscribe section start -->
       <section class="subscribe">
-        <h3 class="section-title">Get The Latest Deals</h3>
+        <h3 class="section-title">
+          Get The <span class="span">Latest</span> Deals
+        </h3>
         <p class="section-description">$30 coupon for first shopping</p>
         <div class="subscribe-email">
           <input
